--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Responsive Auto-height - fullPage.js</title>
-	<meta name="author" content="Alvaro Trigo Lopez" />
-	<meta name="description" content="fullPage full-screen navigation and sections control menu." />
-	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,navigation,control arrows, dots" />
-	<meta name="Resource-type" content="Document" />
+	<title>Portfolio - Achmad Musyaffa Taufiqi</title>
+	<meta name="author" content="Achmad Musyaffa Taufiqi" />
+	<meta name="description" content="Welcome to my portfolio website." />
+	<meta name="keywords"  content="portfolio, amusfq, Achmad Musyaffa Taufiqi, Web, Programmer" />
+	<meta name="Resource-type" content="Website" />
 
 
 	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/fullpage.min.css" />
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
-
-	/* Style for our header texts
-	* --------------------------------------- */
 	h1{
 		font-size: 3em;
+		font-family: arial,helvetica;
+		color: #fff;
+		font-weight: bold;
+		margin: 0;
+		padding:0;
+	}
+
+	h2 {
+		font-size: 2em;
 		font-family: arial,helvetica;
 		color: #fff;
 		font-weight: bold;
@@ -28,6 +33,11 @@
 		margin-left: 0;
 		padding:0;
 	}
+
+	.intro h1 {
+		margin-bottom: 50px;
+	}
+
 	.intro p{
 		color: #000;
 		font-size: 1.5em;
@@ -37,7 +47,25 @@
 	a {
 		margin-left: 10px;
 		margin-right: 10px;
+		color: #fff;
 	}
+	
+	a:hover {
+		color: #fff;
+	}
+
+	.portfolio-desc {
+		margin-top: 20px;
+	}
+
+	.about-title {
+		color: #fff !important;
+	}
+	.about-detail {
+		color: #fff !important;
+		font-size: 1em !important;
+	}
+
 	#profile-img {
 		width: 250px;
 		height: 250px;
@@ -45,13 +73,9 @@
 		object-position: 100% 0;
 	}
 
-	/* Centered texts in each section
-	* --------------------------------------- */
 	.section{
 		text-align:center;
 	}
-
-
 
 	/* Defining each sectino background and styles
 	* --------------------------------------- */
@@ -81,6 +105,21 @@
 		background: -webkit-linear-gradient(#1E88E5, #1565C0);
 		background: linear-gradient(#1E88E5,#1565C0);
 	}
+	#slide3{
+		background: -webkit-gradient(linear, top left, bottom left, from(#030303), to(#1976D2));
+		background: -webkit-linear-gradient(#42A5F5, #1976D2);
+		background: linear-gradient(#42A5F5,#1976D2);
+	}
+	#slide4{
+		background: -webkit-gradient(linear, top left, bottom left, from(#1E88E5), to(#1565C0));
+		background: -webkit-linear-gradient(#1E88E5, #1565C0);
+		background: linear-gradient(#1E88E5,#1565C0);
+	}
+	#slide5{
+		background: -webkit-gradient(linear, top left, bottom left, from(#030303), to(#1976D2));
+		background: -webkit-linear-gradient(#42A5F5, #1976D2);
+		background: linear-gradient(#42A5F5,#1976D2);
+	}
 
 	#fp-nav ul li a span, .fp-slidesNav ul li a span {
 		background: #dc3545;
@@ -98,7 +137,7 @@
 	<div class="section fp-auto-height-responsive" id="section0">
 		<div class="intro">
 			<img class="rounded-circle" id="profile-img" src="dist/img/profile.jpg" alt="">
-			<h1>ACHMAD MUSYAFFA TAUFIQI</h1>
+			<h1 style="margin-top: 20px;margin-bottom: 0px;">ACHMAD MUSYAFFA TAUFIQI</h1>
 			<p>JUNIOR WEB, DEKSTOP, MOBILE DEVELOPER</p>
 			<a class="btn btn-lg btn-outline-danger" href="#portfolio">VIEW PORTFOLIO</a>
 			<a class="btn btn-lg btn-outline-danger" href="#contactMe">ABOUT ME</a>
@@ -108,22 +147,57 @@
 	<div class="section" id="section1">
 	    <div class="slide" id="slide1">
 			<div class="intro">
-				<h1>Ideal for small screens</h1>
+				<h1>Portfolio - Website</h1>
+				<img src="dist/img/ypm.png" alt="Project Portal Web Sekolah" width="900px" class="img-fluid">
+				<p class="portfolio-desc">Website Portal for SMK YPM 1 TAMAN</p>
+				<a href="http://smkypm1taman.sch.id/" class="btn btn-danger btn-lg">View</a>
 			</div>
 		</div>
-
 	    <div class="slide" id="slide2">
-			<h1>This example uses responsiveWidth: 900</h1>
+			<div class="intro">
+				<h1>Portfolio - Website</h1>
+				<img src="dist/img/pos-web.png" alt="Project Point of Sales Application for Web" width="900px" class="img-fluid">
+				<p class="portfolio-desc">Point of Sales Application for Web</p>
+			</div>
 		</div>
-
+	    <div class="slide" id="slide3">
+			<div class="intro">
+				<h1>Portfolio - Desktop</h1>
+				<img src="dist/img/pos-desktop.png" alt="Point of Sales Application for Desktop" width="900px" class="img-fluid">
+				<p class="portfolio-desc">Point of Sales Application for Desktop</p>
+			</div>
+		</div>
+	    <div class="slide" id="slide4">
+			<div class="intro">
+				<h1>Portfolio - Desktop</h1>
+				<img src="dist/img/BMI.png" alt="Project Body Mass Index Calculation Application for Desktop" width="900px" class="img-fluid">
+				<p class="portfolio-desc">Body Mass Index Calculation Application for Desktop</p>
+			</div>
+		</div>
+	    <div class="slide" id="slide5">
+			<div class="intro">
+				<h1>Portfolio - Desktop</h1>
+				<img src="dist/img/kriptografi.png" alt="Project Simple Cryptography Application for Desktop" width="900px" class="img-fluid">
+				<p class="portfolio-desc">Simple Cryptography Application for Desktop</p>
+			</div>
+		</div>
 	</div>
 	<div class="section" id="section2">
 		<div class="intro">
+			<h1 id="contact-title">Contact Me</h1>
 			<div class="row">
 				<div class="col">
-					aasd<i class="fas fa-comment"></i>
+					<p class="about-title">Email</p>
+					<p class="about-detail"><a href="mailto:amusfq@gmail.com">amusfq@gmail.com</a></p>
 				</div>
-				<div class="col">b</div>
+				<div class="col">
+					<p class="about-title">Whatsapp</p>
+					<p class="about-detail">+62 8961-2890-670</p>
+				</div>
+				<div class="col">
+					<p class="about-title">Address</p>
+					<p class="about-detail">Ds. Terung Kulon RT/RW 02/01, Krian, Sidoarjo, Jawa Timur, Indonesia</p>
+				</div>
 			</div>
 		</div>
 	</div>
