--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	    <div class="slide" id="slide1">
 			<div class="intro">
 				<h1>Portfolio - Website</h1>
-				<img src="dist/img/ypm.png" alt="Project Portal Web Sekolah" width="900px" class="img-fluid">
+				<img src="dist/img/ypm.jpg" alt="Project Portal Web Sekolah" width="900px" class="img-fluid">
 				<p class="portfolio-desc">Website Portal for SMK YPM 1 TAMAN</p>
 				<a href="http://smkypm1taman.sch.id/" class="btn btn-danger btn-lg">View</a>
 			</div>
