--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 
 <script type="text/javascript">
     var myFullpage = new fullpage('#fullpage', {
+    	licenseKey: 'WnznrBQ$u1',
         anchors: ['preview', 'portfolio', 'contactMe'],
         navigation: true,
         navigationPosition: 'right',
